# viewer-for-slack

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/constants/: ErrorMessage.ts.html  TextType.ts.html  index.html
coverage/lcov-report/features/: Blob.ts.html  Channel.ts.html  Credential.ts.html  InitializeUser.ts.html  Login.ts.html  Member.ts.html  RefreshToken.ts.html  Reply.ts.html  index.html
coverage/lcov-report/utils/: ApiUtil.ts.html  AuthUtil.ts.html  DateTimeUtil.ts.html  StringUtil.ts.html  index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  credential.rs  main.rs
src-tauri/src/config/: settings.yml
src/components/: Channel.tsx  Channels.tsx  Index.tsx  Initialize.tsx  InitializeUser.tsx  Login.tsx  Message.tsx  MessageForReply.tsx  Messages.tsx  NotFound.tsx  Replies.tsx  Reply.tsx  Viewer.tsx
src/components/layout/: ChannelContent.tsx  ChannelHeader.tsx  MessageContent.tsx  MessageHeader.tsx  ReplyContent.tsx  ReplyHeader.tsx  Viewer.tsx
src/components/parts/: Code.tsx  CodeBlock.tsx  DateTime.tsx  DeletedFile.tsx  Edited.tsx  File.tsx  Files.tsx  Image.tsx  Mention.tsx  ReplyCount.tsx  User.tsx  WorkSpace.tsx
src/constants/: ErrorMessage.ts
src/features/: Blob.ts  Channel.ts  Credential.ts  Initialize.ts  InitializeUser.ts  Load.ts  Login.ts  Member.ts  Message.ts  RefreshToken.ts  Reply.ts
src/stores/: UserStore.tsx
src/test/features/: Blob.test.ts  Channel.test.ts  Credential.test.ts  Initialize.test.ts  InitializeUser.test.ts  Load.test.ts  Login.test.ts  Member.test.ts  RefreshToken.test.ts  Reply.test.ts
src/test/utils/: ApiUtil.test.ts  AuthUtil.test.ts  DateTimeUtil.test.ts  StringUtil.test.tsx
src/types/: AppConfig.ts  RefreshTokenResult.ts  Text.ts  TextType.ts
src/utils/: ApiUtil.ts  AuthUtil.ts  DateTimeUtil.ts  ElementUtil.tsx  StringUtil.ts
