[package]
name = "viewer-for-slack"
version = "0.0.5"
description = "Viewer for Slack"
authors = ["fnya"]
license = "MIT Lisence"
repository = "https://github.com/fnya/viewer-for-slack"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = ["dialog-all", "fs-write-file", "process-exit", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13.3"
keyring = "2.0.5"
whoami = "1.4.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
