[package]
name = "viewer-for-slack"
version = "0.0.8"
description = "Viewer for Slack"
authors = ["fnya"]
license = "MIT Lisence"
repository = "https://github.com/fnya/viewer-for-slack"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = ["dialog-all", "fs-write-file", "process-exit", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13.3"
keyring = "2.0.5"
whoami = "1.4.1"
openssl = "0.10.60"
rustix ="0.38.26"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
